--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,5 +1,8 @@
 <h1>Sign Up Below:</h1>
 <form method="POST" action="/registrations">
+  <label for="name">Name: </label>
+  <input type="text" name="name" id="name">
+  <br>
   
 </form>
 
