--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,7 +3,12 @@
   <label for="name">Name: </label>
   <input type="text" name="name" id="name">
   <br>
-  
+  <label for="email">Email: </label>
+  <input type="text" name="email" id="email">
+  <br>
+  <label for="password">Password: </label>
+  <input type="text" name="password" id="password">
+  <br>
 </form>
 
 
