--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -9,7 +9,7 @@
   <label for="password">Password: </label>
   <input type="text" name="password" id="password">
   <br>
-  <input type="submit" name="submit" value="submit">
+  <input type="submit" name="submit" value="Sign Up">
 </form>
 
 
